--- a/src/pages/ProjectDetail.modules.css
+++ b/src/pages/ProjectDetail.modules.css
@@ -84,6 +84,7 @@ html, body {
     flex-direction: row;
     justify-content: start;
     align-items: center;
+    padding-left: 0px;
 }
 
 .box-icon-details {
@@ -162,6 +163,7 @@ html, body {
     text-align: left;
     align-items: center;
     padding-right: 0px;
+    padding-left: 0px;
 }
 
 .images-details {
